// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddDataCollection form should allow user to submit the form 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -39,11 +39,11 @@
                    >
                      <label
                        class=\\"MuiFormControlLabel-root-192 DepositAgreement-root-188\\"
                      >
                        <span
-                         class=\\"MuiButtonBase-root-212 MuiIconButton-root-206 MuiSwitchBase-root-202 MuiCheckbox-root-196 DepositAgreement-checkboxRoot-190 MuiCheckbox-colorSecondary-201\\"
+                         class=\\"MuiButtonBase-root-212 MuiIconButton-root-206 MuiSwitchBase-root-202 MuiCheckbox-root-196 DepositAgreement-checkboxRoot-190 MuiCheckbox-colorSecondary-201 MuiSwitchBase-checked-203 MuiCheckbox-checked-197 DepositAgreement-checkboxChecked-191\\"
                        >
                          <span
                            class=\\"MuiIconButton-label-211\\"
                          >
                            <svg
@@ -52,11 +52,11 @@
                              focusable=\\"false\\"
                              role=\\"presentation\\"
                              viewBox=\\"0 0 24 24\\"
                            >
                              <path
-                               d=\\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\"
+                               d=\\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\"
                              />
                            </svg>
                            <input
                              class=\\"MuiSwitchBase-input-205\\"
                              data-indeterminate=\\"false\\"
@@ -71,11 +71,11 @@
                        </span>
                        <span
                          class=\\"MuiTypography-root-152 MuiTypography-body2-160 MuiFormControlLabel-label-195\\"
                        >
                          <div
-                           class=\\"MuiTypography-root-152 DepositAgreement-label-189 MuiTypography-body2-160 MuiTypography-colorError-186\\"
+                           class=\\"MuiTypography-root-152 DepositAgreement-label-189 MuiTypography-body2-160 MuiTypography-colorSecondary-183\\"
                          >
                            <div>
                              <p>
                                1.   I am the creator or co-creator of this dataset, or otherwise authorised to deposit or describe it;
                              </p>
@@ -1884,13 +1884,10 @@
                          Validation - 
                        </b>
                        <span>
                          Form cannot be submitted until all fields are valid. Please review all input fields.
                          <ul>
-                           <li>
-                             You are required to accept deposit agreement
-                           </li>
                            <li>
                              Title is required
                            </li>
                            <li>
                              Description is required"
`;

exports[`AddDataCollection form should allow user to submit the form 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -130,44 +130,39 @@
                  >
                    <div
                      class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-12-57\\"
                    >
                      <div
-                       aria-describedby=\\"Dataset name-helper-text\\"
                        class=\\"MuiFormControl-root-231 MuiFormControl-fullWidth-234\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-242 MuiFormLabel-error-245 MuiFormLabel-required-247 MuiInputLabel-root-235 MuiInputLabel-formControl-236 MuiInputLabel-animated-239\\"
-                         data-shrink=\\"false\\"
+                         class=\\"MuiFormLabel-root-242 MuiFormLabel-filled-246 MuiFormLabel-required-247 MuiInputLabel-root-235 MuiInputLabel-formControl-236 MuiInputLabel-animated-239 MuiInputLabel-shrink-238\\"
+                         data-shrink=\\"true\\"
                          for=\\"Dataset name\\"
                        >
                          Dataset name
                          <span
-                           class=\\"MuiFormLabel-asterisk-248 MuiFormLabel-error-245\\"
+                           class=\\"MuiFormLabel-asterisk-248\\"
                          >
                             *
                          </span>
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-262 MuiInput-root-249 MuiInput-underline-253 MuiInputBase-error-268 MuiInput-error-254 MuiInputBase-fullWidth-271 MuiInput-fullWidth-256 MuiInputBase-formControl-263 MuiInput-formControl-250 MuiInputBase-multiline-270 MuiInput-multiline-255\\"
+                         class=\\"MuiInputBase-root-262 MuiInput-root-249 MuiInput-underline-253 MuiInputBase-fullWidth-271 MuiInput-fullWidth-256 MuiInputBase-formControl-263 MuiInput-formControl-250 MuiInputBase-multiline-270 MuiInput-multiline-255\\"
                        >
                          <textarea
-                           aria-invalid=\\"true\\"
+                           aria-invalid=\\"false\\"
                            class=\\"MuiInputBase-input-272 MuiInput-input-257 MuiInputBase-inputMultiline-274 MuiInput-inputMultiline-259\\"
                            id=\\"Dataset name\\"
                            name=\\"rek_title\\"
                            placeholder=\\"Type the descriptive name for the dataset\\"
                            required=\\"\\"
                            rows=\\"1\\"
-                         />
+                         >
+                           testing
+                         </textarea>
                        </div>
-                       <p
-                         class=\\"MuiFormHelperText-root-360 MuiFormHelperText-error-361 MuiFormHelperText-required-367\\"
-                         id=\\"Dataset name-helper-text\\"
-                       >
-                         This field is required
-                       </p>
                      </div>
                    </div>
                    <div
                      class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-12-57\\"
                    >
@@ -1884,13 +1879,10 @@
                          Validation - 
                        </b>
                        <span>
                          Form cannot be submitted until all fields are valid. Please review all input fields.
                          <ul>
-                           <li>
-                             Title is required
-                           </li>
                            <li>
                              Description is required
                            </li>
                            <li>
                              Contact name is required"
`;

exports[`AddDataCollection form should allow user to submit the form 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -165,44 +165,39 @@
                    </div>
                    <div
                      class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-12-57\\"
                    >
                      <div
-                       aria-describedby=\\"Dataset description-helper-text\\"
                        class=\\"MuiFormControl-root-231 MuiFormControl-fullWidth-234\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-242 MuiFormLabel-error-245 MuiFormLabel-required-247 MuiInputLabel-root-235 MuiInputLabel-formControl-236 MuiInputLabel-animated-239\\"
-                         data-shrink=\\"false\\"
+                         class=\\"MuiFormLabel-root-242 MuiFormLabel-filled-246 MuiFormLabel-required-247 MuiInputLabel-root-235 MuiInputLabel-formControl-236 MuiInputLabel-animated-239 MuiInputLabel-shrink-238\\"
+                         data-shrink=\\"true\\"
                          for=\\"Dataset description\\"
                        >
                          Dataset description
                          <span
-                           class=\\"MuiFormLabel-asterisk-248 MuiFormLabel-error-245\\"
+                           class=\\"MuiFormLabel-asterisk-248\\"
                          >
                             *
                          </span>
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-262 MuiInput-root-249 MuiInput-underline-253 MuiInputBase-error-268 MuiInput-error-254 MuiInputBase-fullWidth-271 MuiInput-fullWidth-256 MuiInputBase-formControl-263 MuiInput-formControl-250 MuiInputBase-multiline-270 MuiInput-multiline-255\\"
+                         class=\\"MuiInputBase-root-262 MuiInput-root-249 MuiInput-underline-253 MuiInputBase-fullWidth-271 MuiInput-fullWidth-256 MuiInputBase-formControl-263 MuiInput-formControl-250 MuiInputBase-multiline-270 MuiInput-multiline-255\\"
                        >
                          <textarea
-                           aria-invalid=\\"true\\"
+                           aria-invalid=\\"false\\"
                            class=\\"MuiInputBase-input-272 MuiInput-input-257 MuiInputBase-inputMultiline-274 MuiInput-inputMultiline-259\\"
                            id=\\"Dataset description\\"
                            name=\\"rek_description\\"
                            placeholder=\\"Describe the dataset's topic(s) and theme(s)\\"
                            required=\\"\\"
                            rows=\\"1\\"
-                         />
+                         >
+                           testing
+                         </textarea>
                        </div>
-                       <p
-                         class=\\"MuiFormHelperText-root-360 MuiFormHelperText-error-361 MuiFormHelperText-required-367\\"
-                         id=\\"Dataset description-helper-text\\"
-                       >
-                         This field is required
-                       </p>
                      </div>
                    </div>
                    <div
                      class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51\\"
                    >
@@ -1879,13 +1874,10 @@
                          Validation - 
                        </b>
                        <span>
                          Form cannot be submitted until all fields are valid. Please review all input fields.
                          <ul>
-                           <li>
-                             Description is required
-                           </li>
                            <li>
                              Contact name is required
                            </li>
                            <li>
                              ID for contact name is required"
`;

exports[`AddDataCollection form should allow user to submit the form 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -200,45 +200,38 @@
                    </div>
                    <div
                      class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51\\"
                    >
                      <div
-                       aria-describedby=\\"Contact name-helper-text\\"
                        class=\\"MuiFormControl-root-231 MuiFormControl-fullWidth-234\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-242 MuiFormLabel-error-245 MuiFormLabel-required-247 MuiInputLabel-root-235 MuiInputLabel-formControl-236 MuiInputLabel-animated-239\\"
-                         data-shrink=\\"false\\"
+                         class=\\"MuiFormLabel-root-242 MuiFormLabel-filled-246 MuiFormLabel-required-247 MuiInputLabel-root-235 MuiInputLabel-formControl-236 MuiInputLabel-animated-239 MuiInputLabel-shrink-238\\"
+                         data-shrink=\\"true\\"
                          for=\\"Contact name\\"
                        >
                          Contact name
                          <span
-                           class=\\"MuiFormLabel-asterisk-248 MuiFormLabel-error-245\\"
+                           class=\\"MuiFormLabel-asterisk-248\\"
                          >
                             *
                          </span>
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-262 MuiInput-root-249 MuiInput-underline-253 MuiInputBase-error-268 MuiInput-error-254 MuiInputBase-fullWidth-271 MuiInput-fullWidth-256 MuiInputBase-formControl-263 MuiInput-formControl-250\\"
+                         class=\\"MuiInputBase-root-262 MuiInput-root-249 MuiInput-underline-253 MuiInputBase-fullWidth-271 MuiInput-fullWidth-256 MuiInputBase-formControl-263 MuiInput-formControl-250\\"
                        >
                          <input
-                           aria-invalid=\\"true\\"
+                           aria-invalid=\\"false\\"
                            class=\\"MuiInputBase-input-272 MuiInput-input-257\\"
                            id=\\"Contact name\\"
                            name=\\"contact.contactName\\"
                            placeholder=\\"Type the name of primary contact for this dataset\\"
                            required=\\"\\"
                            type=\\"text\\"
-                           value=\\"\\"
+                           value=\\"testing\\"
                          />
                        </div>
-                       <p
-                         class=\\"MuiFormHelperText-root-360 MuiFormHelperText-error-361 MuiFormHelperText-required-367\\"
-                         id=\\"Contact name-helper-text\\"
-                       >
-                         This field is required
-                       </p>
                      </div>
                    </div>
                    <div
                      class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51\\"
                    >
@@ -1874,13 +1867,10 @@
                          Validation - 
                        </b>
                        <span>
                          Form cannot be submitted until all fields are valid. Please review all input fields.
                          <ul>
-                           <li>
-                             Contact name is required
-                           </li>
                            <li>
                              ID for contact name is required
                            </li>
                            <li>
                              Contact email is required"
`;

exports[`AddDataCollection form should allow user to submit the form 5`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -237,52 +237,168 @@
                    >
                      <div
                        class=\\"AutoCompleteAsyncField-root-279\\"
                      >
                        <div
-                         aria-expanded=\\"false\\"
+                         aria-expanded=\\"true\\"
                          aria-haspopup=\\"listbox\\"
                          aria-labelledby=\\"downshift-0-label\\"
+                         aria-owns=\\"downshift-0-menu\\"
                          class=\\"AutoCompleteAsyncField-container-280\\"
                          role=\\"combobox\\"
                        >
                          <div
-                           aria-describedby=\\"Contact name ID-helper-text\\"
                            class=\\"MuiFormControl-root-231 MuiFormControl-fullWidth-234\\"
                          >
                            <label
-                             class=\\"MuiFormLabel-root-242 MuiFormLabel-error-245 MuiInputLabel-root-235 MuiInputLabel-formControl-236 MuiInputLabel-animated-239\\"
-                             data-shrink=\\"false\\"
+                             class=\\"MuiFormLabel-root-242 MuiFormLabel-filled-246 MuiInputLabel-root-235 MuiInputLabel-formControl-236 MuiInputLabel-animated-239 MuiInputLabel-shrink-238\\"
+                             data-shrink=\\"true\\"
                              for=\\"Contact name ID\\"
                            >
                              Contact name ID
                            </label>
                            <div
                              aria-autocomplete=\\"list\\"
+                             aria-controls=\\"downshift-0-menu\\"
                              aria-labelledby=\\"downshift-0-label\\"
-                             class=\\"MuiInputBase-root-262 MuiInput-root-249 AutoCompleteAsyncField-inputRoot-282 MuiInput-underline-253 MuiInputBase-error-268 MuiInput-error-254 MuiInputBase-fullWidth-271 MuiInput-fullWidth-256 MuiInputBase-formControl-263 MuiInput-formControl-250\\"
+                             class=\\"MuiInputBase-root-262 MuiInput-root-249 AutoCompleteAsyncField-inputRoot-282 MuiInput-underline-253 MuiInputBase-fullWidth-271 MuiInput-fullWidth-256 MuiInputBase-formControl-263 MuiInput-formControl-250\\"
                            >
                              <input
-                               aria-invalid=\\"true\\"
+                               aria-invalid=\\"false\\"
                                autocomplete=\\"off\\"
                                class=\\"MuiInputBase-input-272 MuiInput-input-257\\"
                                id=\\"downshift-0-input\\"
                                placeholder=\\"Type to search ID of primary contact for this dataset\\"
                                type=\\"text\\"
-                               value=\\"\\"
+                               value=\\"te\\"
+                             />
+                           </div>
+                         </div>
+                         <div
+                           aria-labelledby=\\"downshift-0-label\\"
+                           id=\\"downshift-0-menu\\"
+                           role=\\"listbox\\"
+                         >
+                           <div
+                             id=\\"downshift-popper\\"
+                             role=\\"tooltip\\"
+                             style=\\"position: absolute;\\"
+                           >
+                             <div
+                               class=\\"MuiPaper-root-119 MuiPaper-elevation2-123 AutoCompleteAsyncField-paper-281\\"
+                               style=\\"width: 0px;\\"
+                             >
+                               <li
+                                 aria-selected=\\"false\\"
+                                 class=\\"MuiButtonBase-root-212 MuiListItem-root-384 MuiListItem-default-387 MuiListItem-gutters-391 MuiListItem-button-392 MuiMenuItem-root-382\\"
+                                 id=\\"downshift-0-item-0\\"
+                                 role=\\"option\\"
+                                 style=\\"font-weight: 400; white-space: normal; height: auto;\\"
+                                 tabindex=\\"-1\\"
+                               >
+                                 <div
+                                   class=\\"MuiListItemText-root-395\\"
+                                 >
+                                   <span
+                                     class=\\"MuiTypography-root-152 MuiTypography-body1-161 MuiListItemText-primary-398\\"
+                                   >
+                                     Kisely, Steve (uqskisely)
+                                   </span>
+                                   <p
+                                     class=\\"MuiTypography-root-152 MuiTypography-body2-160 MuiTypography-colorTextSecondary-185 MuiListItemText-secondary-399\\"
+                                   >
+                                     78152
+                                   </p>
+                                 </div>
+                                 <span
+                                   class=\\"MuiTouchRipple-root-224\\"
+                                 />
+                               </li>
+                               <li
+                                 aria-selected=\\"false\\"
+                                 class=\\"MuiButtonBase-root-212 MuiListItem-root-384 MuiListItem-default-387 MuiListItem-gutters-391 MuiListItem-button-392 MuiMenuItem-root-382\\"
+                                 id=\\"downshift-0-item-1\\"
+                                 role=\\"option\\"
+                                 style=\\"font-weight: 400; white-space: normal; height: auto;\\"
+                                 tabindex=\\"-1\\"
+                               >
+                                 <div
+                                   class=\\"MuiListItemText-root-395\\"
+                                 >
+                                   <span
+                                     class=\\"MuiTypography-root-152 MuiTypography-body1-161 MuiListItemText-primary-398\\"
+                                   >
+                                     Stevenson, Philip G. (uqpsteven)
+                                   </span>
+                                   <p
+                                     class=\\"MuiTypography-root-152 MuiTypography-body2-160 MuiTypography-colorTextSecondary-185 MuiListItemText-secondary-399\\"
+                                   >
+                                     352995
+                                   </p>
+                                 </div>
+                                 <span
+                                   class=\\"MuiTouchRipple-root-224\\"
                                  />
+                               </li>
+                               <li
+                                 aria-selected=\\"false\\"
+                                 class=\\"MuiButtonBase-root-212 MuiListItem-root-384 MuiListItem-default-387 MuiListItem-gutters-391 MuiListItem-button-392 MuiMenuItem-root-382\\"
+                                 id=\\"downshift-0-item-2\\"
+                                 role=\\"option\\"
+                                 style=\\"font-weight: 400; white-space: normal; height: auto;\\"
+                                 tabindex=\\"-1\\"
+                               >
+                                 <div
+                                   class=\\"MuiListItemText-root-395\\"
+                                 >
+                                   <span
+                                     class=\\"MuiTypography-root-152 MuiTypography-body1-161 MuiListItemText-primary-398\\"
+                                   >
+                                     O'Donoghue, Steven (uqsodono)
+                                   </span>
+                                   <p
+                                     class=\\"MuiTypography-root-152 MuiTypography-body2-160 MuiTypography-colorTextSecondary-185 MuiListItemText-secondary-399\\"
+                                   >
+                                     75121
+                                   </p>
                                  </div>
+                                 <span
+                                   class=\\"MuiTouchRipple-root-224\\"
+                                 />
+                               </li>
+                               <li
+                                 aria-selected=\\"false\\"
+                                 class=\\"MuiButtonBase-root-212 MuiListItem-root-384 MuiListItem-default-387 MuiListItem-gutters-391 MuiListItem-button-392 MuiMenuItem-root-382\\"
+                                 id=\\"downshift-0-item-3\\"
+                                 role=\\"option\\"
+                                 style=\\"font-weight: 400; white-space: normal; height: auto;\\"
+                                 tabindex=\\"-1\\"
+                               >
+                                 <div
+                                   class=\\"MuiListItemText-root-395\\"
+                                 >
+                                   <span
+                                     class=\\"MuiTypography-root-152 MuiTypography-body1-161 MuiListItemText-primary-398\\"
+                                   >
+                                     Wallis, Steven C. (uqswallis)
+                                   </span>
                                    <p
-                             class=\\"MuiFormHelperText-root-360 MuiFormHelperText-error-361\\"
-                             id=\\"Contact name ID-helper-text\\"
+                                     class=\\"MuiTypography-root-152 MuiTypography-body2-160 MuiTypography-colorTextSecondary-185 MuiListItemText-secondary-399\\"
                                    >
-                             This field is required
+                                     75875
                                    </p>
+                                 </div>
+                                 <span
+                                   class=\\"MuiTouchRipple-root-224\\"
+                                 />
+                               </li>
+                             </div>
                            </div>
                          </div>
                        </div>
                      </div>
+                   </div>
                    <div
                      class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-12-57\\"
                    >
                      <div
                        aria-describedby=\\"Contact email-helper-text\\"
@@ -1867,13 +1983,10 @@
                          Validation - 
                        </b>
                        <span>
                          Form cannot be submitted until all fields are valid. Please review all input fields.
                          <ul>
-                           <li>
-                             ID for contact name is required
-                           </li>
                            <li>
                              Contact email is required
                            </li>
                            <li>
                              Field of research (FoR) codes are required"
`;

exports[`AddDataCollection form should allow user to submit the form 6`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`AddDataCollection form should allow user to submit the form 7`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -403,12 +403,12 @@
                      <div
                        aria-describedby=\\"Contact email-helper-text\\"
                        class=\\"MuiFormControl-root-231 MuiFormControl-fullWidth-234\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-242 MuiFormLabel-error-245 MuiFormLabel-required-247 MuiInputLabel-root-235 MuiInputLabel-formControl-236 MuiInputLabel-animated-239\\"
-                         data-shrink=\\"false\\"
+                         class=\\"MuiFormLabel-root-242 MuiFormLabel-error-245 MuiFormLabel-filled-246 MuiFormLabel-required-247 MuiInputLabel-root-235 MuiInputLabel-formControl-236 MuiInputLabel-animated-239 MuiInputLabel-shrink-238\\"
+                         data-shrink=\\"true\\"
                          for=\\"Contact email\\"
                        >
                          Contact email
                          <span
                            class=\\"MuiFormLabel-asterisk-248 MuiFormLabel-error-245\\"
@@ -425,18 +425,18 @@
                            id=\\"Contact email\\"
                            name=\\"contact.contactEmail\\"
                            placeholder=\\"Type the email address of primary contact for this dataset\\"
                            required=\\"\\"
                            type=\\"text\\"
-                           value=\\"\\"
+                           value=\\"testing\\"
                          />
                        </div>
                        <p
-                         class=\\"MuiFormHelperText-root-360 MuiFormHelperText-error-361 MuiFormHelperText-required-367\\"
+                         class=\\"MuiFormHelperText-root-360 MuiFormHelperText-error-361 MuiFormHelperText-filled-366 MuiFormHelperText-required-367\\"
                          id=\\"Contact email-helper-text\\"
                        >
-                         This field is required
+                         Email address is not valid
                        </p>
                      </div>
                    </div>
                    <div
                      class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-12-57\\""
`;

exports[`AddDataCollection form should allow user to submit the form 8`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -399,45 +399,38 @@
                    </div>
                    <div
                      class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-12-57\\"
                    >
                      <div
-                       aria-describedby=\\"Contact email-helper-text\\"
                        class=\\"MuiFormControl-root-231 MuiFormControl-fullWidth-234\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-242 MuiFormLabel-error-245 MuiFormLabel-filled-246 MuiFormLabel-required-247 MuiInputLabel-root-235 MuiInputLabel-formControl-236 MuiInputLabel-animated-239 MuiInputLabel-shrink-238\\"
+                         class=\\"MuiFormLabel-root-242 MuiFormLabel-filled-246 MuiFormLabel-required-247 MuiInputLabel-root-235 MuiInputLabel-formControl-236 MuiInputLabel-animated-239 MuiInputLabel-shrink-238\\"
                          data-shrink=\\"true\\"
                          for=\\"Contact email\\"
                        >
                          Contact email
                          <span
-                           class=\\"MuiFormLabel-asterisk-248 MuiFormLabel-error-245\\"
+                           class=\\"MuiFormLabel-asterisk-248\\"
                          >
                             *
                          </span>
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-262 MuiInput-root-249 MuiInput-underline-253 MuiInputBase-error-268 MuiInput-error-254 MuiInputBase-fullWidth-271 MuiInput-fullWidth-256 MuiInputBase-formControl-263 MuiInput-formControl-250\\"
+                         class=\\"MuiInputBase-root-262 MuiInput-root-249 MuiInput-underline-253 MuiInputBase-fullWidth-271 MuiInput-fullWidth-256 MuiInputBase-formControl-263 MuiInput-formControl-250\\"
                        >
                          <input
-                           aria-invalid=\\"true\\"
+                           aria-invalid=\\"false\\"
                            class=\\"MuiInputBase-input-272 MuiInput-input-257\\"
                            id=\\"Contact email\\"
                            name=\\"contact.contactEmail\\"
                            placeholder=\\"Type the email address of primary contact for this dataset\\"
                            required=\\"\\"
                            type=\\"text\\"
-                           value=\\"testing\\"
+                           value=\\"testing@test.com\\"
                          />
                        </div>
-                       <p
-                         class=\\"MuiFormHelperText-root-360 MuiFormHelperText-error-361 MuiFormHelperText-filled-366 MuiFormHelperText-required-367\\"
-                         id=\\"Contact email-helper-text\\"
-                       >
-                         Email address is not valid
-                       </p>
                      </div>
                    </div>
                    <div
                      class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-12-57\\"
                    >
@@ -1983,13 +1976,10 @@
                          Validation - 
                        </b>
                        <span>
                          Form cannot be submitted until all fields are valid. Please review all input fields.
                          <ul>
-                           <li>
-                             Contact email is required
-                           </li>
                            <li>
                              Field of research (FoR) codes are required
                            </li>
                            <li>
                              Author/creator names are required"
`;

exports[`AddDataCollection form should allow user to submit the form 9`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -658,48 +658,172 @@
                  <div>
                    <div
                      class=\\"AutoCompleteAsyncField-root-279\\"
                    >
                      <div
-                       aria-expanded=\\"false\\"
+                       aria-expanded=\\"true\\"
                        aria-haspopup=\\"listbox\\"
                        aria-labelledby=\\"downshift-1-label\\"
+                       aria-owns=\\"downshift-1-menu\\"
                        class=\\"AutoCompleteAsyncField-container-280\\"
                        role=\\"combobox\\"
                      >
                        <div
                          aria-describedby=\\"Field of research-helper-text\\"
                          class=\\"MuiFormControl-root-231 MuiFormControl-fullWidth-234\\"
                        >
                          <label
-                           class=\\"MuiFormLabel-root-242 MuiFormLabel-error-245 MuiInputLabel-root-235 MuiInputLabel-formControl-236 MuiInputLabel-animated-239\\"
-                           data-shrink=\\"false\\"
+                           class=\\"MuiFormLabel-root-242 MuiFormLabel-error-245 MuiFormLabel-filled-246 MuiInputLabel-root-235 MuiInputLabel-formControl-236 MuiInputLabel-animated-239 MuiInputLabel-shrink-238\\"
+                           data-shrink=\\"true\\"
                            for=\\"Field of research\\"
                          >
                            Field of research
                          </label>
                          <div
                            aria-autocomplete=\\"list\\"
+                           aria-controls=\\"downshift-1-menu\\"
                            aria-labelledby=\\"downshift-1-label\\"
                            class=\\"MuiInputBase-root-262 MuiInput-root-249 AutoCompleteAsyncField-inputRoot-282 MuiInput-underline-253 MuiInputBase-error-268 MuiInput-error-254 MuiInputBase-fullWidth-271 MuiInput-fullWidth-256 MuiInputBase-formControl-263 MuiInput-formControl-250\\"
                          >
                            <input
                              aria-invalid=\\"true\\"
                              autocomplete=\\"off\\"
                              class=\\"MuiInputBase-input-272 MuiInput-input-257\\"
                              id=\\"downshift-1-input\\"
                              placeholder=\\"Start typing code or field name and select from list\\"
                              type=\\"text\\"
-                             value=\\"\\"
+                             value=\\"Math\\"
                            />
                          </div>
                          <p
-                           class=\\"MuiFormHelperText-root-360 MuiFormHelperText-error-361\\"
+                           class=\\"MuiFormHelperText-root-360 MuiFormHelperText-error-361 MuiFormHelperText-filled-366\\"
                            id=\\"Field of research-helper-text\\"
                          >
                            Field of research values are required
                          </p>
+                       </div>
+                       <div
+                         aria-labelledby=\\"downshift-1-label\\"
+                         id=\\"downshift-1-menu\\"
+                         role=\\"listbox\\"
+                       >
+                         <div
+                           id=\\"downshift-popper\\"
+                           role=\\"tooltip\\"
+                           style=\\"position: absolute;\\"
+                         >
+                           <div
+                             class=\\"MuiPaper-root-119 MuiPaper-elevation2-123 AutoCompleteAsyncField-paper-281\\"
+                             style=\\"width: 0px;\\"
+                           >
+                             <li
+                               aria-selected=\\"false\\"
+                               class=\\"MuiButtonBase-root-212 MuiListItem-root-384 MuiListItem-default-387 MuiListItem-gutters-391 MuiListItem-button-392 MuiMenuItem-root-382\\"
+                               id=\\"downshift-1-item-0\\"
+                               role=\\"option\\"
+                               style=\\"font-weight: 400; white-space: normal; height: auto;\\"
+                               tabindex=\\"-1\\"
+                             >
+                               <div
+                                 class=\\"MuiListItemText-root-395\\"
+                               >
+                                 <span
+                                   class=\\"MuiTypography-root-152 MuiTypography-body1-161 MuiListItemText-primary-398\\"
+                                 >
+                                   01 Mathematical Sciences
+                                 </span>
+                               </div>
+                               <span
+                                 class=\\"MuiTouchRipple-root-224\\"
+                               />
+                             </li>
+                             <li
+                               aria-selected=\\"false\\"
+                               class=\\"MuiButtonBase-root-212 MuiListItem-root-384 MuiListItem-default-387 MuiListItem-gutters-391 MuiListItem-button-392 MuiMenuItem-root-382\\"
+                               id=\\"downshift-1-item-1\\"
+                               role=\\"option\\"
+                               style=\\"font-weight: 400; white-space: normal; height: auto;\\"
+                               tabindex=\\"-1\\"
+                             >
+                               <div
+                                 class=\\"MuiListItemText-root-395\\"
+                               >
+                                 <span
+                                   class=\\"MuiTypography-root-152 MuiTypography-body1-161 MuiListItemText-primary-398\\"
+                                 >
+                                   0101 Pure Mathematics
+                                 </span>
+                               </div>
+                               <span
+                                 class=\\"MuiTouchRipple-root-224\\"
+                               />
+                             </li>
+                             <li
+                               aria-selected=\\"false\\"
+                               class=\\"MuiButtonBase-root-212 MuiListItem-root-384 MuiListItem-default-387 MuiListItem-gutters-391 MuiListItem-button-392 MuiMenuItem-root-382\\"
+                               id=\\"downshift-1-item-2\\"
+                               role=\\"option\\"
+                               style=\\"font-weight: 400; white-space: normal; height: auto;\\"
+                               tabindex=\\"-1\\"
+                             >
+                               <div
+                                 class=\\"MuiListItemText-root-395\\"
+                               >
+                                 <span
+                                   class=\\"MuiTypography-root-152 MuiTypography-body1-161 MuiListItemText-primary-398\\"
+                                 >
+                                   010104 Combinatorics and Discrete Mathematics (excl. Physical Combinatorics)
+                                 </span>
+                               </div>
+                               <span
+                                 class=\\"MuiTouchRipple-root-224\\"
+                               />
+                             </li>
+                             <li
+                               aria-selected=\\"false\\"
+                               class=\\"MuiButtonBase-root-212 MuiListItem-root-384 MuiListItem-default-387 MuiListItem-gutters-391 MuiListItem-button-392 MuiMenuItem-root-382\\"
+                               id=\\"downshift-1-item-3\\"
+                               role=\\"option\\"
+                               style=\\"font-weight: 400; white-space: normal; height: auto;\\"
+                               tabindex=\\"-1\\"
+                             >
+                               <div
+                                 class=\\"MuiListItemText-root-395\\"
+                               >
+                                 <span
+                                   class=\\"MuiTypography-root-152 MuiTypography-body1-161 MuiListItemText-primary-398\\"
+                                 >
+                                   010107 Mathematical Logic, Set Theory, Lattices and Universal Algebra
+                                 </span>
+                               </div>
+                               <span
+                                 class=\\"MuiTouchRipple-root-224\\"
+                               />
+                             </li>
+                             <li
+                               aria-selected=\\"false\\"
+                               class=\\"MuiButtonBase-root-212 MuiListItem-root-384 MuiListItem-default-387 MuiListItem-gutters-391 MuiListItem-button-392 MuiMenuItem-root-382\\"
+                               id=\\"downshift-1-item-4\\"
+                               role=\\"option\\"
+                               style=\\"font-weight: 400; white-space: normal; height: auto;\\"
+                               tabindex=\\"-1\\"
+                             >
+                               <div
+                                 class=\\"MuiListItemText-root-395\\"
+                               >
+                                 <span
+                                   class=\\"MuiTypography-root-152 MuiTypography-body1-161 MuiListItemText-primary-398\\"
+                                 >
+                                   010199 Pure Mathematics not elsewhere classified
+                                 </span>
+                               </div>
+                               <span
+                                 class=\\"MuiTouchRipple-root-224\\"
+                               />
+                             </li>
+                           </div>
+                         </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>"
`;

exports[`AddDataCollection form should allow user to submit the form 10`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`AddDataCollection form should allow user to submit the form 11`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -868,33 +868,33 @@
                      >
                        <div
                          class=\\"MuiFormControl-root-231 MuiFormControl-fullWidth-234\\"
                        >
                          <label
-                           class=\\"MuiFormLabel-root-242 MuiFormLabel-error-245 MuiFormLabel-required-247 MuiInputLabel-root-235 MuiInputLabel-formControl-236 MuiInputLabel-animated-239\\"
-                           data-shrink=\\"false\\"
+                           class=\\"MuiFormLabel-root-242 MuiFormLabel-filled-246 MuiFormLabel-required-247 MuiInputLabel-root-235 MuiInputLabel-formControl-236 MuiInputLabel-animated-239 MuiInputLabel-shrink-238\\"
+                           data-shrink=\\"true\\"
                            for=\\"nameAsPublishedField\\"
                          >
                            Enter each creator's name as published (eg. Smith, John)
                            <span
-                             class=\\"MuiFormLabel-asterisk-248 MuiFormLabel-error-245\\"
+                             class=\\"MuiFormLabel-asterisk-248\\"
                            >
                               *
                            </span>
                          </label>
                          <div
-                           class=\\"MuiInputBase-root-262 MuiInput-root-249 MuiInput-underline-253 MuiInputBase-error-268 MuiInput-error-254 MuiInputBase-fullWidth-271 MuiInput-fullWidth-256 MuiInputBase-formControl-263 MuiInput-formControl-250\\"
+                           class=\\"MuiInputBase-root-262 MuiInput-root-249 MuiInput-underline-253 MuiInputBase-fullWidth-271 MuiInput-fullWidth-256 MuiInputBase-formControl-263 MuiInput-formControl-250\\"
                          >
                            <input
-                             aria-invalid=\\"true\\"
+                             aria-invalid=\\"false\\"
                              autocomplete=\\"off\\"
                              class=\\"MuiInputBase-input-272 MuiInput-input-257\\"
                              id=\\"nameAsPublishedField\\"
                              placeholder=\\"Type the name exactly as published\\"
                              required=\\"\\"
                              type=\\"text\\"
-                             value=\\"\\"
+                             value=\\"test\\"
                            />
                          </div>
                        </div>
                      </div>
                      <div
@@ -902,22 +902,23 @@
                      >
                        <div
                          class=\\"AutoCompleteAsyncField-root-279\\"
                        >
                          <div
-                           aria-expanded=\\"false\\"
+                           aria-expanded=\\"true\\"
                            aria-haspopup=\\"listbox\\"
                            aria-labelledby=\\"downshift-2-label\\"
+                           aria-owns=\\"downshift-2-menu\\"
                            class=\\"AutoCompleteAsyncField-container-280\\"
                            role=\\"combobox\\"
                          >
                            <div
                              class=\\"MuiFormControl-root-231 MuiFormControl-fullWidth-234\\"
                            >
                              <label
-                               class=\\"MuiFormLabel-root-242 MuiFormLabel-required-247 MuiInputLabel-root-235 MuiInputLabel-formControl-236 MuiInputLabel-animated-239\\"
-                               data-shrink=\\"false\\"
+                               class=\\"MuiFormLabel-root-242 MuiFormLabel-filled-246 MuiFormLabel-required-247 MuiInputLabel-root-235 MuiInputLabel-formControl-236 MuiInputLabel-animated-239 MuiInputLabel-shrink-238\\"
+                               data-shrink=\\"true\\"
                                for=\\"Enter creator's role\\"
                              >
                                Enter creator's role
                                <span
                                  class=\\"MuiFormLabel-asterisk-248\\"
@@ -925,10 +926,11 @@
                                   *
                                </span>
                              </label>
                              <div
                                aria-autocomplete=\\"list\\"
+                               aria-controls=\\"downshift-2-menu\\"
                                aria-labelledby=\\"downshift-2-label\\"
                                class=\\"MuiInputBase-root-262 MuiInput-root-249 AutoCompleteAsyncField-inputRoot-282 MuiInput-underline-253 MuiInputBase-fullWidth-271 MuiInput-fullWidth-256 MuiInputBase-formControl-263 MuiInput-formControl-250\\"
                              >
                                <input
                                  aria-invalid=\\"false\\"
@@ -936,32 +938,198 @@
                                  class=\\"MuiInputBase-input-272 MuiInput-input-257\\"
                                  id=\\"downshift-2-input\\"
                                  placeholder=\\"Select role from list or type the role of the creator in relation to the dataset\\"
                                  required=\\"\\"
                                  type=\\"text\\"
-                                 value=\\"\\"
+                                 value=\\"test\\"
+                               />
+                             </div>
+                           </div>
+                           <div
+                             aria-labelledby=\\"downshift-2-label\\"
+                             id=\\"downshift-2-menu\\"
+                             role=\\"listbox\\"
+                           >
+                             <div
+                               id=\\"downshift-popper\\"
+                               role=\\"tooltip\\"
+                               style=\\"position: absolute;\\"
+                             >
+                               <div
+                                 class=\\"MuiPaper-root-119 MuiPaper-elevation2-123 AutoCompleteAsyncField-paper-281\\"
+                                 style=\\"width: 0px;\\"
+                               >
+                                 <li
+                                   aria-selected=\\"false\\"
+                                   class=\\"MuiButtonBase-root-212 MuiListItem-root-384 MuiListItem-default-387 MuiListItem-gutters-391 MuiListItem-button-392 MuiMenuItem-root-382\\"
+                                   id=\\"downshift-2-item-0\\"
+                                   role=\\"option\\"
+                                   style=\\"font-weight: 400; white-space: normal; height: auto;\\"
+                                   tabindex=\\"-1\\"
+                                 >
+                                   <div
+                                     class=\\"MuiListItemText-root-395\\"
+                                   >
+                                     <span
+                                       class=\\"MuiTypography-root-152 MuiTypography-body1-161 MuiListItemText-primary-398\\"
+                                     >
+                                       Project lead/Principal investigator
+                                     </span>
+                                   </div>
+                                   <span
+                                     class=\\"MuiTouchRipple-root-224\\"
+                                   />
+                                 </li>
+                                 <li
+                                   aria-selected=\\"false\\"
+                                   class=\\"MuiButtonBase-root-212 MuiListItem-root-384 MuiListItem-default-387 MuiListItem-gutters-391 MuiListItem-button-392 MuiMenuItem-root-382\\"
+                                   id=\\"downshift-2-item-1\\"
+                                   role=\\"option\\"
+                                   style=\\"font-weight: 400; white-space: normal; height: auto;\\"
+                                   tabindex=\\"-1\\"
+                                 >
+                                   <div
+                                     class=\\"MuiListItemText-root-395\\"
+                                   >
+                                     <span
+                                       class=\\"MuiTypography-root-152 MuiTypography-body1-161 MuiListItemText-primary-398\\"
+                                     >
+                                       Co-investigator
+                                     </span>
+                                   </div>
+                                   <span
+                                     class=\\"MuiTouchRipple-root-224\\"
+                                   />
+                                 </li>
+                                 <li
+                                   aria-selected=\\"false\\"
+                                   class=\\"MuiButtonBase-root-212 MuiListItem-root-384 MuiListItem-default-387 MuiListItem-gutters-391 MuiListItem-button-392 MuiMenuItem-root-382\\"
+                                   id=\\"downshift-2-item-2\\"
+                                   role=\\"option\\"
+                                   style=\\"font-weight: 400; white-space: normal; height: auto;\\"
+                                   tabindex=\\"-1\\"
+                                 >
+                                   <div
+                                     class=\\"MuiListItemText-root-395\\"
+                                   >
+                                     <span
+                                       class=\\"MuiTypography-root-152 MuiTypography-body1-161 MuiListItemText-primary-398\\"
+                                     >
+                                       Higher degree research student
+                                     </span>
+                                   </div>
+                                   <span
+                                     class=\\"MuiTouchRipple-root-224\\"
+                                   />
+                                 </li>
+                                 <li
+                                   aria-selected=\\"false\\"
+                                   class=\\"MuiButtonBase-root-212 MuiListItem-root-384 MuiListItem-default-387 MuiListItem-gutters-391 MuiListItem-button-392 MuiMenuItem-root-382\\"
+                                   id=\\"downshift-2-item-3\\"
+                                   role=\\"option\\"
+                                   style=\\"font-weight: 400; white-space: normal; height: auto;\\"
+                                   tabindex=\\"-1\\"
+                                 >
+                                   <div
+                                     class=\\"MuiListItemText-root-395\\"
+                                   >
+                                     <span
+                                       class=\\"MuiTypography-root-152 MuiTypography-body1-161 MuiListItemText-primary-398\\"
+                                     >
+                                       Research assistant
+                                     </span>
+                                   </div>
+                                   <span
+                                     class=\\"MuiTouchRipple-root-224\\"
+                                   />
+                                 </li>
+                                 <li
+                                   aria-selected=\\"false\\"
+                                   class=\\"MuiButtonBase-root-212 MuiListItem-root-384 MuiListItem-default-387 MuiListItem-gutters-391 MuiListItem-button-392 MuiMenuItem-root-382\\"
+                                   id=\\"downshift-2-item-4\\"
+                                   role=\\"option\\"
+                                   style=\\"font-weight: 400; white-space: normal; height: auto;\\"
+                                   tabindex=\\"-1\\"
+                                 >
+                                   <div
+                                     class=\\"MuiListItemText-root-395\\"
+                                   >
+                                     <span
+                                       class=\\"MuiTypography-root-152 MuiTypography-body1-161 MuiListItemText-primary-398\\"
+                                     >
+                                       Software engineer
+                                     </span>
+                                   </div>
+                                   <span
+                                     class=\\"MuiTouchRipple-root-224\\"
+                                   />
+                                 </li>
+                                 <li
+                                   aria-selected=\\"false\\"
+                                   class=\\"MuiButtonBase-root-212 MuiListItem-root-384 MuiListItem-default-387 MuiListItem-gutters-391 MuiListItem-button-392 MuiMenuItem-root-382\\"
+                                   id=\\"downshift-2-item-5\\"
+                                   role=\\"option\\"
+                                   style=\\"font-weight: 400; white-space: normal; height: auto;\\"
+                                   tabindex=\\"-1\\"
+                                 >
+                                   <div
+                                     class=\\"MuiListItemText-root-395\\"
+                                   >
+                                     <span
+                                       class=\\"MuiTypography-root-152 MuiTypography-body1-161 MuiListItemText-primary-398\\"
+                                     >
+                                       Statistician
+                                     </span>
+                                   </div>
+                                   <span
+                                     class=\\"MuiTouchRipple-root-224\\"
                                    />
+                                 </li>
+                                 <li
+                                   aria-selected=\\"false\\"
+                                   class=\\"MuiButtonBase-root-212 MuiListItem-root-384 MuiListItem-default-387 MuiListItem-gutters-391 MuiListItem-button-392 MuiMenuItem-root-382\\"
+                                   id=\\"downshift-2-item-6\\"
+                                   role=\\"option\\"
+                                   style=\\"font-weight: 400; white-space: normal; height: auto;\\"
+                                   tabindex=\\"-1\\"
+                                 >
+                                   <div
+                                     class=\\"MuiListItemText-root-395\\"
+                                   >
+                                     <span
+                                       class=\\"MuiTypography-root-152 MuiTypography-body1-161 MuiListItemText-primary-398\\"
+                                     >
+                                       Technician
+                                     </span>
                                    </div>
+                                   <span
+                                     class=\\"MuiTouchRipple-root-224\\"
+                                   />
+                                 </li>
+                               </div>
                              </div>
                            </div>
                          </div>
                        </div>
+                     </div>
                      <div
                        class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
                        style=\\"margin-bottom: 8px;\\"
                      >
                        <button
-                         class=\\"MuiButtonBase-root-212 MuiButtonBase-disabled-213 MuiButton-root-296 MuiButton-contained-307 MuiButton-containedPrimary-308 MuiButton-raised-310 MuiButton-raisedPrimary-311 MuiButton-disabled-316 MuiButton-fullWidth-321\\"
-                         disabled=\\"\\"
-                         tabindex=\\"-1\\"
+                         class=\\"MuiButtonBase-root-212 MuiButton-root-296 MuiButton-contained-307 MuiButton-containedPrimary-308 MuiButton-raised-310 MuiButton-raisedPrimary-311 MuiButton-fullWidth-321\\"
+                         tabindex=\\"0\\"
                          type=\\"button\\"
                        >
                          <span
                            class=\\"MuiButton-label-297\\"
                          >
                            Add creator
                          </span>
+                         <span
+                           class=\\"MuiTouchRipple-root-224\\"
+                         />
                        </button>
                      </div>
                    </div>
                    <span
                      class=\\"MuiTypography-root-152 MuiTypography-caption-162 MuiTypography-colorError-186\\""
`;
